RESOLVED FIXED179418
HTMLMediaElement should not use element fullscreen on iOS
https://bugs.webkit.org/show_bug.cgi?id=179418
Summary HTMLMediaElement should not use element fullscreen on iOS
Jeremy Jones
Reported 2017-11-08 01:15:02 PST
HTMLMediaElement should not use element fullscreen on iOS
Attachments
Patch (3.35 KB, patch)
2017-11-08 01:18 PST, Jeremy Jones
no flags
Patch (45.14 KB, patch)
2017-11-08 13:16 PST, Jeremy Jones
no flags
Patch (44.99 KB, patch)
2017-11-08 14:00 PST, Jeremy Jones
no flags
Patch (44.99 KB, patch)
2017-11-08 14:05 PST, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-11-08 01:15:39 PST
Jeremy Jones
Comment 2 2017-11-08 01:18:16 PST
Darin Adler
Comment 3 2017-11-08 09:30:14 PST
Comment on attachment 326315 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=326315&action=review > Source/WebCore/ChangeLog:9 > + Add a setting videoUsesElementFullScreen to determine if HTMLMediaElement should use element full screen or not. What’s the rationale behind using a setting instead of a compile time switch?
Jeremy Jones
Comment 4 2017-11-08 12:44:33 PST
(In reply to Darin Adler from comment #3) > Comment on attachment 326315 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=326315&action=review > > > Source/WebCore/ChangeLog:9 > > + Add a setting videoUsesElementFullScreen to determine if HTMLMediaElement should use element full screen or not. > > What’s the rationale behind using a setting instead of a compile time switch? Originally I though there might be clients that wanted to control how videos were presented. But we don't actually have a use case for that. I'll change this to be a compile time switch.
Jeremy Jones
Comment 5 2017-11-08 13:16:07 PST
Jeremy Jones
Comment 6 2017-11-08 14:00:10 PST
Build Bot
Comment 7 2017-11-08 14:02:11 PST
Attachment 326368 [details] did not pass style-queue: ERROR: Tools/ChangeLog:1: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jeremy Jones
Comment 8 2017-11-08 14:05:55 PST
WebKit Commit Bot
Comment 9 2017-11-08 16:43:39 PST
Comment on attachment 326369 [details] Patch Clearing flags on attachment: 326369 Committed r224607: <https://trac.webkit.org/changeset/224607>
WebKit Commit Bot
Comment 10 2017-11-08 16:43:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.