HTMLMediaElement should not use element fullscreen on iOS https://bugs.webkit.org/show_bug.cgi?id=179418 rdar://problem/35409277

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-11-08
Reviewed by Eric Carlson.

Add ENABLE_VIDEO_USES_ELEMENT_FULLSCREEN to determine if HTMLMediaElement should use element full screen or not.

Source/JavaScriptCore:

* Configurations/FeatureDefines.xcconfig:

Source/WebCore:

* Configurations/FeatureDefines.xcconfig:
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::enterFullscreen):

Source/WebCore/PAL:

* Configurations/FeatureDefines.xcconfig:

Source/WebKit:

* Configurations/FeatureDefines.xcconfig:

Source/WebKitLegacy/mac:

* Configurations/FeatureDefines.xcconfig:

Tools:

* TestWebKitAPI/Configurations/FeatureDefines.xcconfig:

Canonical link: https://commits.webkit.org/195506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224607 268f45cc-cd09-0410-ab3c-d52691b4dbfc